Adjustments in work experience and volunteering

--- a/index.html
+++ b/index.html
@@ -49,19 +49,22 @@
       </p>
 
       <div class="empresa">
+
+        <!-- siteware -->
         <span class="empresa-ano">04/2022 - 08/2023</span>
-        <h3 class="empresa-titulo">
-          Siteware
-        </h3>
+        <h3 class="empresa-titulo">Front-End Engineer</h3>
 
         <div class="cargo-infos">
-          <span class="empresa-titulo">
-            Front-End Software Engineer</span>
-          <span class="empresa-cargo">Efetivo | Produto</span>
+          <span class="empresa-cargo">Siteware, <em>Efetivo</em></span>
         </div>
 
         <p class="empresa-texto">
-          Construção, projeção e manutenção da arquitetura do STRATWs One, software presente em mais de 12 países, utilizando Angular e Razor como principais tecnologias, além de técnicas de UX/UI.
+          • Manutenção e adições em sistema com Angular e Razor;<br />
+          • Estilização e layout de páginas com SASS consumindo um Design System;<br />
+          • Uso de UI & UX para precisão e comunicação entre design e desenvolvimento;<br />
+          • Construção e utilização de APIs;<br />
+          • Aplicação de CI/CD para otimizar desenvolvimento e entrega contínua;<br />
+          • Auxílio na migração de monolito para arquitetura de microsserviço.<br />
         </p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
@@ -70,25 +73,28 @@
           <li>Angular</li>
           <li>Typescript</li>
           <li>Razor</li>
-          <li>C#</li>
           <li>Azure</li>
+          <li>Microservice</li>
+          <li>CI/CD</li>
         </ul>
       </div>
 
+      <!-- TCERJ -->
       <div class="empresa">
         <span class="empresa-ano">05/2019 - 04/2021</span>
-        <h3 class="empresa-titulo">
-          Tribunal de Contas do <br />Estado do Rio de Janeiro
-        </h3>
+        <h3 class="empresa-titulo">Full-stack Developer</h3>
 
         <div class="cargo-infos">
-          <span class="empresa-titulo">Desenvolvedora Fullstack</span>
-          <span class="empresa-cargo">Estágio | Diretoria de Tecnologia da Informação</span>
+          <span class="empresa-cargo">Tribunal de Contas do Estado do Rio de Janeiro, <em>Estágio</em></span>
         </div>
+
         <p class="empresa-texto">
-          Desenvolvimento de sistemas; criação e manutenção de aplicações Web,
-          desktop e Web APIs; testes integrados; UI Design; UX Writing; apoio
-          em gestão de projetos.
+          • Criação e manutenção de aplicações em sistema com Angular e .NET;<br />
+          • Desenvolvimento e integração de APIs;<br />
+          • Realização de testes integrados para assegurar a qualidade do sistema;<br />
+          • Uso de práticas de UI & UX para criação e aprovação de protótipos;<br />
+          • Suporte na gestão e coordenação de projetos utilizando Microsoft Azure;<br />
+          • Produção de documentação de processos e guias informativos para usuários.
         </p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
@@ -103,55 +109,58 @@
         </ul>
       </div>
 
+      <!-- Flanci -->
       <div class="empresa">
         <span class="empresa-ano">06/2016 - 05/2019</span>
-        <h3 class="empresa-titulo">Flanci Corretora de Seguros</h3>
+        <h3 class="empresa-titulo">Marketing Analyst & Graphic Designer</h3>
 
         <div class="cargo-infos">
-          <span class="empresa-titulo">Analista de Marketing/Designer</span>
-          <span class="empresa-cargo">Efetivo
-          </span>
+          <span class="empresa-cargo">Flanci Corretora de Seguros, <em>Efetivo</em></span>
         </div>
 
+
         <p class="empresa-texto">
-          Responsável pelo setor de marketing; produção e gestão de material
-          on/off; elaboração de estratégias de marketing; UI designer; UX
-          writer/researcher.
+          • Liderança do setor de marketing;<br />
+          • Gerenciamento estratégico de mídias sociais;<br />
+          • Design e montagem de peças para mídias impressas e digitais;<br />
+          • Produção de conteúdos em WordPress, enfatizando propostas de valor;<br />
+          • UI Design para sites com ênfase na estética visual e na conversão de vendas;<br />
+          • Condução de pesquisas de UX para guiar elaboração de materiais.
         </p>
         <ul class="empresa-habilidades">
-          <li>UI Design</li>
-          <li>UX</li>
+          <li>Marketing strategy</li>
+          <li>UX Writing</li>
           <li>Social Media</li>
-          <li>Wordpress</li>
-          <li>Illustrator</li>
-          <li>Corel Draw</li>
           <li>Photoshop</li>
+          <li>UI Design</li>
+          <li>Wordpress</li>
         </ul>
       </div>
 
+      <!-- MPRJ -->
       <div class="empresa">
         <span class="empresa-ano">06/2014 - 05/2016</span>
-        <h3 class="empresa-titulo">
-          Ministério Público do <br />Estado do Rio de Janeiro
-        </h3>
+        <h3 class="empresa-titulo">Web Developer</h3>
+
         <div class="cargo-infos">
-          <span class="empresa-titulo">Desenvolvedora Web</span>
-          <span class="empresa-cargo">Estágio | Gerência de Portal e Programação Visual</span>
+          <span class="empresa-cargo">Ministério Público do
+            Estado do Rio de Janeiro, <em>Estágio</em></span>
         </div>
 
         <p class="empresa-texto">
-          Migração do site MPRJ (Oracle - Liferay); manutenção do mesmo e seus
-          subsites (Liferay e Wordpress); diagramação de informativos;
-          mentoria de estagiários.
+          • Execução da migração do site MPRJ, otimizando de Oracle para Liferay;<br />
+          • Manutenção contínua do site principal da empresa e de seus subsites;<br />
+          • Diagramação, em ferramentas de Design, de informativos para os usuários;<br />
+          • Mentoria de novos estagiários, contribuindo para a eficiência da equipe;<br />
+          • Publicação de conteúdos no site principal do MPRJ e relacionados, utilizando WordPress como gestão.
         </p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
           <li>CSS</li>
-          <li>DreamWeaver</li>
           <li>Liferay</li>
           <li>Wordpress</li>
-          <li>Gestão de Conteúdo</li>
-          <li>InDesign</li>
+          <li>Content Management</li>
+          <li>Adobe InDesign</li>
         </ul>
       </div>
 
@@ -161,14 +170,14 @@
         </p>
 
         <div class="empresa">
-          <span class="empresa-ano">09/2019 - presente</span>
-          <h3 class="empresa-titulo">
-            PerifaCode
-          </h3>
-          <div class="cargo-infos">
-            <span class="empresa-titulo">Colaboradora</span>
+          <span class="empresa-ano">09/2019 - 12/2021</span>
 
+          <h3 class="empresa-titulo">PerifaCode</h3>
+
+          <div class="cargo-infos">
+            <span class="empresa-cargo">Colaboradora</span>
           </div>
+
 
           <p class="empresa-texto">
             Compartilhamento de conhecimento e conteúdo para apoiar pessoas, principalmente de áreas periféricas, que queiram ingressar na área de tecnologia.
@@ -176,32 +185,29 @@
           <ul class="empresa-habilidades">
             <li>HTML</li>
             <li>CSS</li>
-            <li>Inglês</li>
-            <li>Dicas para iniciantes</li>
-            <li>Dicas de carreira</li>
-            <li>Divulgação de conteúdo</li>
+            <li>JavaScript</li>
+            <li>English</li>
+            <li>Tech tips for beginners</li>
           </ul>
         </div>
 
         <div class="empresa">
           <span class="empresa-ano">03/2010 - presente</span>
-          <h3 class="empresa-titulo">
-            Tenho Mais Discos Que Amigos!
-          </h3>
-          <div class="cargo-infos">
-            <span class="empresa-titulo">Redatora</span>
+          <h3 class="empresa-titulo">Tenho Mais Discos Que Amigos!</h3>
 
+          <div class="cargo-infos">
+            <span class="empresa-cargo">Redatora/Repórter</span>
           </div>
 
           <p class="empresa-texto">
-            Suporte cultural para o portal <a href="http://tenhomaisdiscosqueamigos.com" target="_blank">tenhomaisdiscosqueamigos.com</a>; redação; cobertura jornalística de eventos; entrevistas. Já fui responsável por revisão de textos; gestão de conteúdo/de mídias sociais e suporte técnico.
+            Ofereço suporte cultural para o portal <a href="http://tenhomaisdiscosqueamigos.com" target="_blank">tenhomaisdiscosqueamigos.com</a>, onde acumulo ampla experiência em comunicação e mídias sociais. Realizo cobertura jornalística de grandes eventos e conduzo entrevistas nacionais e internacionais. Anteriormente, liderei projetos de revisão e edição de textos, gestão de conteúdo, administração de redes sociais e suporte técnico na plataforma Wordpress.
           </p>
           <ul class="empresa-habilidades">
             <li>HTML</li>
             <li>CSS</li>
             <li>WordPress</li>
-            <li>Redação</li>
-            <li>Gestão de conteúdo</li>
+            <li>Writing</li>
+            <li>Content management</li>
             <li>Social Media</li>
           </ul>
         </div>
@@ -215,6 +221,8 @@
   <section class="portfolio" id="portfolio" aria-label="Portfolio">
     <div class="portfolio-container">
       <h2 class="subtitulo">Portfólio</h2>
+
+      <!-- Crio experiências digitais para web e mobile, focando em soluções intuitivas, funcionais e atraentes. Transformo ideias em interfaces elegantes e funcionais. Adoro explorar novas tendências e tecnologias para garantir que cada projeto seja inovador e relevante. -->
 
       <div>
         <p class="portfolio-texto">
