--- a/index.html
+++ b/index.html
@@ -48,9 +48,37 @@
         Além de <strong>Front-end Developer</strong>, área onde busco me especializar ✨, sou entusiasta de <strong>Tecnologia da Informação</strong> e <strong>UX</strong>. Sou apaixonada por criar experiências <strong>inclusivas</strong> e <strong>acessíveis</strong>. Acredito no <strong>poder transformador</strong> da tecnologia e estou comprometida em impactar positivamente as pessoas com <strong>soluções amigáveis</strong> e <strong>inovadoras</strong>.
       </p>
 
+      <!-- Onegreen -->
       <div class="empresa">
+        <span class="empresa-ano">08/2023 - presente</span>
+        <h3 class="empresa-titulo">Front-End Developer</h3>
 
-        <!-- siteware -->
+        <div class="cargo-infos">
+          <span class="empresa-cargo">Onegreen, <em>PJ</em></span>
+        </div>
+
+        <p class="empresa-texto">
+          • Aprimoramento e expansão de funcionalidades em sistema com Vue e Razor;<br />
+          • Apoio na reformulação e modernização da arquitetura do projeto Front-End;<br />
+          • Criação de páginas Web estilizadas com base em um Design System;<br />
+          • Utilização de técnicas de UI & UX para auxiliar a criação de protótipos;<br />
+          • Suporte na documentação de processos;<br />
+          • Assistência na gestão de tarefas.
+        </p>
+        <ul class="empresa-habilidades">
+          <li>HTML</li>
+          <li>CSS/LESS</li>
+          <li>Vue</li>
+          <li>UI & UX</li>
+          <li>Typescript</li>
+          <li>Design System</li>
+          <li>Task management</li>
+          <li>Software documentation</li>
+        </ul>
+      </div>
+
+      <!-- siteware -->
+      <div class="empresa">
         <span class="empresa-ano">04/2022 - 08/2023</span>
         <h3 class="empresa-titulo">Front-End Engineer</h3>
 
@@ -164,11 +192,36 @@
         </ul>
       </div>
 
+
       <div class="voluntariado">
         <p class="experiencia-texto" style="margin-top: 60px;">
           Eu <strong>amo colaborar</strong> 🥰 com projetos que eu acredito, por isso busco me envolver em alguns deles como <strong>voluntária</strong>.
         </p>
 
+        <!-- Rocketseat -->
+        <div class="empresa">
+          <span class="empresa-ano">05/2024 - presente</span>
+
+          <h3 class="empresa-titulo">Rocketseat</h3>
+
+          <div class="cargo-infos">
+            <span class="empresa-cargo">Participante</span>
+          </div>
+
+
+          <p class="empresa-texto">
+            Participante da comunidade de tecnologia da Rocketseat, tanto para receber ajuda quanto para fornecer suporte, promovendo o desenvolvimento coletivo. Mantenho-me atualizada através de mentorias, conversas com instrutores, cursos, participação em eventos e networking com outros alunos.
+          </p>
+          <ul class="empresa-habilidades">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>Soft Skills</li>
+          </ul>
+        </div>
+
+        <!-- PerifaCode -->
         <div class="empresa">
           <span class="empresa-ano">09/2019 - 12/2021</span>
 
@@ -191,6 +244,7 @@
           </ul>
         </div>
 
+        <!-- TMDQA! -->
         <div class="empresa">
           <span class="empresa-ano">03/2010 - presente</span>
           <h3 class="empresa-titulo">Tenho Mais Discos Que Amigos!</h3>
