Updating portfolio text

--- a/index.html
+++ b/index.html
@@ -276,16 +276,10 @@
     <div class="portfolio-container">
       <h2 class="subtitulo">Portfólio</h2>
 
-      <!-- Crio experiências digitais para web e mobile, focando em soluções intuitivas, funcionais e atraentes. Transformo ideias em interfaces elegantes e funcionais. Adoro explorar novas tendências e tecnologias para garantir que cada projeto seja inovador e relevante. -->
-
       <div>
         <p class="portfolio-texto">
-          Desenvolvo projetos com <strong>HTML</strong>,
-          <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos
-          web 💻, uso <strong>React</strong> e <strong>SASS</strong>; para
-          mobile 📱, utilizo <strong>React Native</strong>. Já a prototipação,
-          faço no <strong>Figma</strong>, aproveitando conhecimentos em Adobe
-          XD, Illustrator, Corel Draw, Photoshop e Axure.
+
+          Crio <strong>experiências digitais</strong> para web 💻 e mobile 📱, focando em <strong>soluções</strong> intuitivas, funcionais e atraentes. Adoro explorar <strong>novas tendências e tecnologias</strong> para garantir que cada projeto seja <strong>inovador</strong> e <strong>relevante</strong>.
         </p>
 
         <div class="portfolio-item">
