Updating courses and events

--- a/index.html
+++ b/index.html
@@ -436,17 +436,26 @@
           <div class="cursos">
             <h3>Cursos Intensivos</h3>
             <ul>
+              <li><span class="titulo-curso">Algoritmo e Lógica de Programação<a href="https://www.udemy.com/certificate/UC-dba70c8f-80ec-48b9-89e4-58d2d468659d/" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Cod3r | 02/2023</span></li>
+
+              <li><span class="titulo-curso">CSS Avançado<a href="https://www.origamid.com/certificate/9f74d0a5" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Origamid | 01/2023</span></li>
+
               <li><span class="titulo-curso">React<a href="https://drive.google.com/file/d/1yZEkF6s6fnSdQbzZi02wZswpQOBzTl03/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Raro Academy | 05/2022</span></li>
+
               <li><span class="titulo-curso">Intel. Emocional <a href="https://drive.google.com/file/d/1US3hGRqi12Gnmvjx-0lWdYlmpH6wxPzO/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Conquer | 04/2022</span></li>
+
               <li><span class="titulo-curso">Produtividade <a href="https://drive.google.com/file/d/1i6BiAhIDRkd9jmEWdmwektOfnd9P5I5N/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Conquer | 01/2022</span></li>
+
               <li><span class="titulo-curso">UI Design <a href="https://drive.google.com/file/d/1Q6E2lQqlge_6uuvRqjNBWUqZi5s8kQPP/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Origamid | 11/2021</span></li>
 
               <li><span class="titulo-curso">CSS Flexbox <a href="https://drive.google.com/file/d/1pLYiJ_0Tt75Ut8OlIWkJ6riUXMexr9j7/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Origamid | 11/2021</span></li>
+
               <li>Next Level Week <span>Rocketseat | 11/2021</span></li>
               <li>
 
                 <span class="titulo-curso">DevCarreiraUP<a href="https://drive.google.com/file/d/11504EMbQ2qrh-boJSRiUPYFyo5_59tFc/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Google | 12/2020</span>
               </li>
+
               <li>Imersão GameDev <span>Alura | 06/2020</span></li>
             </ul>
           </div>
@@ -463,12 +472,19 @@
           <div class="eventos">
             <h3>Eventos atendidos</h3>
             <ul>
+              <li><span class="titulo-evento">Clean Code | Programaria<a href="https://drive.google.com/file/d/1_3qVngvwZBTWnerXm3R_ZE1l_1GKCDmP/view" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2023</span></li>
+
               <li><span class="titulo-evento">Women Techmakers BR<a href="https://drive.google.com/file/d/1IJ-ZVBVqOr1jg3_vdwOJLOMj_IO9bgN3/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2022</span></li>
+
               <li><span class="titulo-evento">DoWhile <a href="https://drive.google.com/drive/folders/1ci4TYmkfRBuT6IXLCrA3LCptVBC8WLnl?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2021 - 2020</span></li>
+
               <li><span class="titulo-evento">Programaria Summit <a href="https://drive.google.com/drive/folders/1VvoLXIaXn5eiIafTkHLzNlyFdCWIZz3c?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2021 - 2020</span></li>
+
               <li><span class="titulo-evento">Pelotas JS <a href="https://drive.google.com/file/d/1fumFxuPTpiKtP6LKhT9KJJd-wRUu_58s/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2020</span></li>
+
               <li><span class="titulo-evento">TDC Recife: Web e Front-End <a href="https://drive.google.com/file/d/1kAx2oGhenNJLI06CBdfhxwnXgzRsjatT/view?usp=sharing
                   " target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2020</span></li>
+
               <li><span class="titulo-evento">TDC Recife: JavaScript e NodeJS<a href="https://drive.google.com/file/d/14lgscahZvy_y4iVC9y0DDK0hNr2zkpKn/view?usp=sharing
                     " target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2020</span></li>
               </li>
