Updating work experiences

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           <li>CSS</li>
           <li>Liferay</li>
           <li>Wordpress</li>
-          <li>Content Management</li>
+          <li>Content management</li>
           <li>Adobe InDesign</li>
         </ul>
       </div>
