--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
             <ul>
               <li><span class="titulo-curso">Formação Full-stack (em andamento)</span> <span>Rocketseat | 2024</span></li>
 
-              <li><span class="titulo-curso">Lógica de Programação<a href="https://www.udemy.com/certificate/UC-dba70c8f-80ec-48b9-89e4-58d2d468659d/" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Cod3r | 02/2023</span></li>
+              <li><span class="titulo-curso">Algoritmo e Lógica de Programação<a href="https://www.udemy.com/certificate/UC-dba70c8f-80ec-48b9-89e4-58d2d468659d/" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Cod3r | 02/2023</span></li>
 
               <li><span class="titulo-curso">CSS Avançado<a href="https://www.origamid.com/certificate/9f74d0a5" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Origamid | 01/2023</span></li>
 
